# tryqt

./: .gitignore  README.md  snippets.md
console/: CMakeLists.txt  README.md  hello.pro  main.cpp
designer/: groupbox.ui
network/: CMakeLists.txt  echoServer.js  gen.sh  lmsEmulator.js  lmsemulator.cpp  lmsemulator.h  lmsreader.cpp  lmsreader.h  lmsvm.cpp  lmsvm.h  main.cpp  network.pro
